--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,8 @@
         android:layout_height="wrap_content"
         android:hint="Password"
         android:textSize="25sp"
-        android:layout_margin="20sp"/>
+        android:layout_margin="20sp"
+        android:id="@+id/etPassword"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,7 +29,8 @@
         android:textSize="20sp"
         android:background="@android:color/holo_blue_dark"
         android:layout_margin="20sp"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/white"
+        android:id="@+id/btnSave"/>
 
 
 </LinearLayout>
