--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,11 @@
     android:orientation="vertical"
     android:gravity="center">
 
+<ImageView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:src="@drawable/softwaricalogo"
+    android:layout_marginHorizontal="20sp"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,6 +26,7 @@
         android:hint="Password"
         android:textSize="25sp"
         android:layout_margin="20sp"
+        android:inputType="textPassword"
         android:id="@+id/etPassword"/>
     <Button
         android:layout_width="match_parent"
