--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Age"
+        android:inputType="number"
         android:textSize="20sp"
         android:id="@+id/etAge"
         android:layout_margin="10sp"/>
@@ -61,6 +62,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="save"
+        android:textSize="25dp"
+        android:textColor="@android:color/white"
         android:background="@android:color/holo_blue_dark"
         android:layout_marginTop="10sp"
         android:layout_marginHorizontal="50sp"
